samples/_failures_safe/1761180584_c91d30_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46511d5e.c:156: error: expected ‘;’, ‘,’ or ‘)’ at end of input
